# YOLOv6-MONO2.5D

./: .gitignore
configs/: yolov6l6_finetune_mono2d.py  yolov6l_finetune_mono2.5d.py  yolov6m_finetune_mono2.5d_dim_log.py  yolov6s6_finetune_mono2d.py  yolov6s_finetune_mono3d.py  yolov6s_finetune_mono3d_dim.py  yolov6s_finetune_mono3d_dim_diff.py  yolov6s_finetune_mono3d_dim_log.py
data/: Rope3d_self_collections.yaml  coco  coco.yaml  mini_rope3d.yaml  rope3d.yaml
deploy/ONNX/: export_onnx.py
deploy/TensorRT/: CMakeLists.txt  onnx_to_trt.py  yolov6.cpp  yolov6_mono_2.5d.cpp
tools/: eval.py  rope2yolo.py  train.py
yolov6/assigners/: anchor_generator.py  tal_assigner.py
yolov6/core/: engine.py  evaler.py  inferer.py
yolov6/data/: data_augment.py  datasets.py  rope2yolo.py
yolov6/models/: effidehead.py  yolo.py
yolov6/models/losses/: loss.py
yolov6/utils/: events.py  metrics.py  nms.py  show_2d3d_box.py
